# e-commerce

./: README.md  docker-compose.yaml  er.md  pyproject.toml  user-path.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yaml  er.md  pyproject.toml
backend/docker/api/: Dockerfile
backend/docker/celery-worker/: Dockerfile
backend/dummy-data/: dummy_products.sql
backend/src/: celery_tasks.py  config.py  constraints.py  custom_exceptions.py  deps.py  file_storage.py  logger.py  main.py  payments.py  permissions.py  utils.py
backend/src/celery_/: tasks.py  utils.py
backend/src/clients/: http_client.py  redis_client.py
backend/src/crud/: __init__.py  addresses.py  base.py  carts.py  categories.py  images.py  orders.py  payments.py  products.py  reviews.py  tokens.py  users.py
backend/src/db/: db.py  db_init.py  models.py
backend/src/email_templates/: confirmation_code.html  email_confirmation.html
backend/src/html_templates/: password_recovery.html
backend/src/routers/: addresses.py  auth.py  cart.py  categories.py  orders.py  payments.py  products.py  reviews.py  users.py
backend/src/schemas/: address.py  base.py  cart.py  category.py  client_secret.py  filtration.py  image.py  item.py  new_password.py  order.py  product.py  review.py  user.py
backend/src/service/: cart.py  category.py  order.py  product.py  review.py  token.py  user.py
frontend/: package.json
src/: config.py  custom_types.py  deps.py  file_storage.py  main.py  permissions.py  utils.py
src/celery_/: config.py  tasks.py
src/clients/: redis_client.py
(+24 files in other folders)
