[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "celery>=5.4.0",
    "fastapi>=0.115.11",
    "flower>=2.0.1",
    "jinja2>=3.1.5",
    "passlib>=1.7.4",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.38",
    "stripe>=11.6.0",
    "uvicorn>=0.34.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.14",
]
